--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>iaera</title>
 <style type="text/css">
-@import url("http://fonts.googleapis.com/css?family=Droid+Sans:400,700");
+@import url("//fonts.googleapis.com/css?family=Droid+Sans:400,700");
 body {
   font-size: 16px;
   font-family: "helvetica neue", helvetica, arial, sans-serif;
