--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <title>iaera</title>
+<link rel="preconnect" href="https://rsms.me/">
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <style type="text/css">
-@import url("//fonts.googleapis.com/css?family=Droid+Sans:400,700");
 body {
   font-size: 16px;
-  font-family: "helvetica neue", helvetica, arial, sans-serif;
+  font-family: InterVariable, "helvetica neue", helvetica, arial, sans-serif;
+  font-feature-settings: 'liga' 1, 'calt' 1, 'ss01' 1, 'ss03' 1, 'cv01' 1 , 'cv05' 1, 'cv11' 1;
   background-color: hsla(220, 70%, 97%, 1);
   margin: 0;
   padding: 0;
@@ -19,18 +21,16 @@ body {
 h1 {
   margin: 0;
   padding: 0;
-  font-family: "Droid Sans", "helvetica neue", helvetica, arial, sans-serif;
   font-weight: 700;
   font-size: 7.5em;
   line-height: 1em;
-  letter-spacing: -0.06em;
+  letter-spacing: -0.02em;
   color: hsla(220, 80%, 93%, 1);
   text-shadow: 0px 2px 1px hsla(220, 80%, 80%, 0.50);
 }
 p {
   margin: 0;
   padding: 0;
-  font-family: "Droid Sans", "helvetica neue", helvetica, arial, sans-serif;
   font-weight: 400;
   line-height: 2em;
   color: hsla(220, 80%, 93%, 1);
@@ -39,14 +39,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
-.ra-kerning {
-  letter-spacing: -0.04em;
-}
 </style>
 </head>
 <body>
 <div id="iaera">
-  <h1>iae<span class="ra-kerning">ra</span></h1>
+  <h1>iaera</h1>
 </div>
 <div id="copyright">
   <p>copyright &copy; <span id="year"></span> iaera.</p>
